--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&display=swap');
+html{
+  margin: 0;
+}
 
 body {
   margin: 0;
