--- a/client/src/assets/globalVariables.scss
+++ b/client/src/assets/globalVariables.scss
@@ -1,3 +1,5 @@
 $formBackgroundColor: rgb(249, 249, 249);
 $formBorderColor: rgb(163, 163, 163);
 $borderRadius: 10px;
+$boxShadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+$blueThemeBackgroundColor: #8aaae5;
