--- a/client/src/components/layout/navigation/Navigation.module.scss
+++ b/client/src/components/layout/navigation/Navigation.module.scss
@@ -15,11 +15,48 @@
     .navBarItem {
       list-style: none;
     }
+
+    .greeting {
+      cursor: pointer;
+    }
   }
 
-  a {
-    text-decoration: none;
-    color: white;
+  .navBarItem {
+    .logoutBtn,
+    .loginBtn,
+    .registerBtn {
+      text-decoration: none;
+      color: white;
+      border: 1px solid white;
+      padding: 5px 20px;
+      border-radius: 20px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #7494ce;
+        transition: background-color 0.2s ease-out;
+      }
+    }
+
+    .myProperties,
+    .myBookings {
+      text-decoration: none;
+      color: white;
+      position: relative;
+
+      &:hover:after {
+        background-color: white;
+        height: 3px;
+        width: 30px;
+        border: none;
+        content: "";
+        display: block;
+        margin: auto;
+        border-radius: 10px;
+        position: relative;
+        top: 5px;
+      }
+    }
   }
 }
 .navLogoPicture {
@@ -42,4 +79,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.logo {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 20px;
 }
