--- a/client/src/pages/Unauthorized/Unauthorized.module.scss
+++ b/client/src/pages/Unauthorized/Unauthorized.module.scss
@@ -1,12 +1,12 @@
-.errorMessage{
-    color: rgb(135, 0, 0);
+.errorMessage {
+  color: rgb(135, 0, 0);
 }
 
-.errorContainer{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.errorContainerWrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  .errorContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,8 +14,8 @@
     border: 1px solid rgb(163, 163, 163);
     border-radius: 10px;
     padding: 20px 40px;
-    
-    h2{
-        margin-top: 0;
+    h2 {
+      margin-top: 0;
     }
+  }
 }
