Add propertyCardsContainer class stylings

--- a/client/src/pages/MyProperties/MyProperties.module.scss
+++ b/client/src/pages/MyProperties/MyProperties.module.scss
@@ -1,7 +1,14 @@
-.errorMessage{
-    color: rgb(186, 12, 12);
-    position: absolute;
-    top: 40%; 
-    left: 50%;
-  transform: translate(-50%,-50%);
+.errorMessage {
+  color: rgb(186, 12, 12);
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.propertyCardsContainer {
+  margin: 20px 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
 }
