--- a/client/src/pages/NotFound/NotFound.module.scss
+++ b/client/src/pages/NotFound/NotFound.module.scss
@@ -10,12 +10,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    row-gap: 20px;
     background-color: rgb(249, 249, 249);
     border: 1px solid rgb(163, 163, 163);
     border-radius: 10px;
     padding: 20px 40px;
     h2 {
-      margin-top: 0;
+      margin: 0;
     }
   }
 }
