--- a/client/src/pages/Login/Login.module.scss
+++ b/client/src/pages/Login/Login.module.scss
@@ -6,6 +6,13 @@
   justify-content: center;
   margin: 50px 0;
 
+  .errorsContainer {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    text-align: center;
+  }
+
   .loginForm {
     display: flex;
     flex-direction: column;
