--- a/client/src/components/home/GuestHome/GuestHome.module.scss
+++ b/client/src/components/home/GuestHome/GuestHome.module.scss
@@ -10,6 +10,13 @@
     width: 50%;
   }
 
+  .introductionContentHidden {
+    padding: 50px 50px;
+    width: 50%;
+    opacity: 0;
+    transform: translateX(-50%);
+  }
+
   .introductionContent {
     display: flex;
     flex-flow: column nowrap;
@@ -17,6 +24,9 @@
     color: rgb(75, 75, 75);
     padding: 50px 50px;
     width: 50%;
+    opacity: 1;
+    transform: translateX(0%);
+    transition: transform 1s, opacity 1s ease-out;
 
     h1 {
       font-size: 30px;
@@ -100,6 +110,18 @@
       margin-right: 125px;
     }
 
+    .benefitCardHidden {
+      width: 20%;
+      padding: 30px;
+      height: 250px;
+      opacity: 0;
+      transform: translateX(-100%);
+
+      i {
+        opacity: 0;
+      }
+    }
+
     .benefitCard {
       display: flex;
       flex-flow: column nowrap;
@@ -110,6 +132,21 @@
       height: 250px;
       border-radius: 10px;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      opacity: 1;
+      transform: translateX(0%);
+      transition: transform 1s, opacity 1s ease-out;
+
+      &:nth-child(1) {
+        transition-delay: 200ms;
+      }
+
+      &:nth-child(2) {
+        transition-delay: 800ms;
+      }
+
+      &:nth-child(3) {
+        transition-delay: 1400ms;
+      }
 
       h3 {
         font-size: 26px;
@@ -150,6 +187,26 @@
     width: 100%;
     justify-content: space-around;
     margin-top: 30px;
+
+    .testimonialCardHidden {
+      opacity: 0;
+      width: 20%;
+      padding: 30px;
+      height: 350px;
+    }
+
+    .testimonialCard:nth-child(1) {
+      transition-delay: 200ms;
+    }
+
+    .testimonialCard:nth-child(2) {
+      transition-delay: 600ms;
+    }
+
+    .testimonialCard:nth-child(3) {
+      transition-delay: 1000ms;
+    }
+
     .testimonialCard {
       position: relative;
       display: flex;
@@ -162,6 +219,8 @@
       height: 350px;
       border-radius: 10px;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      opacity: 1;
+      transition: opacity 1s ease-out;
 
       .testimonialCardPersonImage {
         border-radius: 50%;
