--- a/client/src/components/home/GuestHome/TenantHome/TenantHome.module.scss
+++ b/client/src/components/home/GuestHome/TenantHome/TenantHome.module.scss
@@ -5,12 +5,79 @@ h1 {
   margin: 0;
 }
 
+.searchBarContainerWrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  row-gap: 20px;
+  margin-top: 20px;
+
+  .errorsContainer {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    .error {
+      color: red;
+      text-align: center;
+    }
+  }
+
+  .searchBarContainer {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    width: 100%;
+
+    #searchOptions {
+      border-left: none;
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .searchInput {
+      border: 1px solid grey;
+      border-right: none;
+      border-top-left-radius: globalVariables.$borderRadius;
+      border-bottom-left-radius: globalVariables.$borderRadius;
+      width: 20%;
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .searchBtn {
+      background-color: rgb(0, 142, 230);
+      border: 1px solid grey;
+      padding: 10px;
+      border-top-right-radius: globalVariables.$borderRadius;
+      border-bottom-right-radius: globalVariables.$borderRadius;
+      &:hover {
+        background-color: rgb(10, 161, 255);
+        transition: background-color 0.5s ease-out;
+      }
+
+      i {
+        font-size: 20px;
+        color: white;
+      }
+    }
+  }
+
+  .viewAllBtn {
+    all: unset;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
+
 .propertyCards {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
-  padding: 20px;
+  padding: 20px 0;
   row-gap: 20px;
+  width: 100%;
 
   .propertyCard {
     display: flex;
@@ -49,6 +116,28 @@ h1 {
         border-radius: 20px;
         background-color: rgb(148, 148, 148);
         transition: background-color, border-radius 0.6s ease-out;
+      }
+    }
+  }
+}
+
+.paginationBtnsWrapper {
+  display: flex;
+  justify-content: center;
+  .paginationBtns {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    width: 40%;
+    margin: 20px 0;
+
+    .paginationBtn {
+      all: unset;
+      text-decoration: underline;
+      font-size: 20px;
+
+      &:disabled {
+        opacity: 0.2;
       }
     }
   }
