--- a/client/src/pages/MyBookings/MyBookings.module.scss
+++ b/client/src/pages/MyBookings/MyBookings.module.scss
@@ -80,4 +80,22 @@
     all: unset;
     text-decoration: underline;
   }
+
+  .paginationBtns {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    width: 40%;
+    margin: 20px 0;
+
+    .paginationBtn {
+      all: unset;
+      text-decoration: underline;
+      font-size: 20px;
+
+      &:disabled {
+        opacity: 0.2;
+      }
+    }
+  }
 }
