Add exploreProperties class styling in Navigation

--- a/client/src/components/layout/navigation/Navigation.module.scss
+++ b/client/src/components/layout/navigation/Navigation.module.scss
@@ -39,7 +39,8 @@
     }
 
     .myProperties,
-    .myBookings {
+    .myBookings,
+    .exploreProperties {
       text-decoration: none;
       color: white;
 
