--- a/client/src/components/home/GuestHome/GuestHome.module.scss
+++ b/client/src/components/home/GuestHome/GuestHome.module.scss
@@ -50,6 +50,7 @@
       margin-bottom: 20px;
 
       .introductionGetStartedBtn {
+        text-align: center;
         all: unset;
         cursor: pointer;
         color: white;
@@ -65,6 +66,7 @@
 
       .introductionSignInBtn {
         all: unset;
+        text-align: center;
         cursor: pointer;
         font-weight: bold;
         color: globalVariables.$blueThemeBackgroundColor;
@@ -94,6 +96,8 @@
 
   .benefitsDescription {
     font-size: 18px;
+    text-align: center;
+    margin: 20px;
   }
 
   .benefitCards {
@@ -102,18 +106,12 @@
     width: 100%;
     justify-content: space-around;
     margin-top: 30px;
-
-    .benefitCard:nth-child(1) {
-      margin-left: 125px;
-    }
-    .benefitCard:nth-child(3) {
-      margin-right: 125px;
-    }
+    column-gap: 10px;
+    padding: 0px 10px;
 
     .benefitCardHidden {
       width: 20%;
       padding: 30px;
-      height: 250px;
       opacity: 0;
       transform: translateX(-100%);
 
@@ -129,7 +127,6 @@
       background-color: white;
       color: rgb(75, 75, 75);
       padding: 30px;
-      height: 250px;
       border-radius: 10px;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       opacity: 1;
@@ -192,7 +189,6 @@
       opacity: 0;
       width: 20%;
       padding: 30px;
-      height: 350px;
     }
 
     .testimonialCard:nth-child(1) {
@@ -216,11 +212,11 @@
       background-color: rgb(251, 251, 251);
       color: rgb(75, 75, 75);
       padding: 30px;
-      height: 350px;
       border-radius: 10px;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       opacity: 1;
       transition: opacity 1s ease-out;
+      row-gap: 10px;
 
       .testimonialCardPersonImage {
         border-radius: 50%;
@@ -231,6 +227,7 @@
       .testimonialPersonName {
         font-size: 14px;
         margin-top: 10px;
+        text-align: center;
       }
 
       .testimonialContent {
@@ -238,10 +235,10 @@
       }
 
       .starsList {
+        margin: 0;
         list-style-type: none;
         padding: 0;
-        position: absolute;
-        bottom: 30px;
+        margin-top: auto;
 
         li {
           display: inline-block;
@@ -251,5 +248,25 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h3 {
+    text-align: center;
+  }
+
+  .benefitCard {
+    i {
+      text-align: center;
+    }
+
+    .benefitCardDescription {
+      text-align: center;
+    }
+  }
+
+  .testimonialContent {
+    text-align: center;
   }
 }
