--- a/client/src/components/booking/Booking.module.scss
+++ b/client/src/components/booking/Booking.module.scss
@@ -5,12 +5,13 @@
   border: 1px solid globalVariables.$formBorderColor;
   box-shadow: globalVariables.$boxShadow;
   border-radius: globalVariables.$borderRadius;
-  padding: 30px;
+  padding: 15px;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   row-gap: 20px;
   width: 25%;
+  justify-content: space-around;
 
   h2,
   p {
@@ -20,6 +21,7 @@
   .firstImage {
     width: 100%;
     height: 50%;
+    border-radius: globalVariables.$borderRadius;
   }
 
   .bookingDates {
@@ -34,8 +36,9 @@
 
   .btnsContainer {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-evenly;
+    gap: 10px;
     width: 100%;
     .editBtn {
       all: unset;
