--- a/client/src/pages/Unauthorized/Unauthorized.module.scss
+++ b/client/src/pages/Unauthorized/Unauthorized.module.scss
@@ -5,7 +5,7 @@
 .errorContainerWrapper {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin: 50px 0;
   .errorContainer {
     display: flex;
     flex-direction: column;
