--- a/client/src/pages/MyBookings/MyBookings.module.scss
+++ b/client/src/pages/MyBookings/MyBookings.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
-  padding: 20px;
+  margin: 20px 0;
   row-gap: 20px;
 
   .viewAllBtnErrorsContainer {
